--- a/UX-UI/maaltidskasser.html
+++ b/UX-UI/maaltidskasser.html
@@ -110,14 +110,14 @@
 <!-- Filter iconer -->
 
 <div class="filter-buttons">
-  <button class="filter-btn" data-filter="Vegansk"><img src="Iconer/vegan-icon.png" alt="Vegansk"></button>
-  <button class="filter-btn" data-filter="Spicy"><img src="Iconer/spicy-icon.png" alt="Spicy"></button>
-  <button class="filter-btn" data-filter="Fisk"><img src="Iconer/fisk-icon.png" alt="Fisk"></button>
-  <button class="filter-btn" data-filter="Hurtigt"><img src="Iconer/hurtig-icon.png" alt="Hurtigt"></button>
-  <button class="filter-btn" data-filter="Fjerkræ"><img src="Iconer/kylling-icon.png" alt="Fjerkræ"></button>
-  <button class="filter-btn" data-filter="Oksekød"><img src="Iconer/kød-icon.png" alt="Oksekød"></button>
-  <button class="filter-btn" data-filter="Gris"><img src="Iconer/gris-icon.png" alt="Gris"></button>
-  <button class="filter-btn" data-filter="Populære"><img src="Iconer/like-icon.png" alt="Populære"></button>
+  <button class="filter-btn" data-filter="Vegansk"><img src="Iconer/vegan-icon.png" alt="Vegansk" title="Vegansk"></button>
+  <button class="filter-btn" data-filter="Spicy"><img src="Iconer/spicy-icon.png" alt="Spicy" title="Spicy"></button>
+  <button class="filter-btn" data-filter="Fisk"><img src="Iconer/fisk-icon.png" alt="Fisk" title="Fisk"></button>
+  <button class="filter-btn" data-filter="Hurtigt"><img src="Iconer/hurtig-icon.png" alt="Hurtigt" title="Hurtigt"></button>
+  <button class="filter-btn" data-filter="Fjerkræ"><img src="Iconer/kylling-icon.png" alt="Fjerkræ" title="Fjerkræ"></button>
+  <button class="filter-btn" data-filter="Oksekød"><img src="Iconer/kød-icon.png" alt="Oksekød" title="Oksekød"></button>
+  <button class="filter-btn" data-filter="Gris"><img src="Iconer/gris-icon.png" alt="Gris" title="Gris"></button>
+  <button class="filter-btn" data-filter="Populære"><img src="Iconer/like-icon.png" alt="Populære" title="Populære"></button>
   <button class="reset-btn">Nulstil Filtre</button>
 </div>
 
